fix($stylesheet): Increase column allocation on tablet view

--- a/src/styles/_section_banner.scss
+++ b/src/styles/_section_banner.scss
@@ -8,7 +8,7 @@
       @include make-col(10);
     }
     @include screen-lg-min {
-      @include make-col(6);
+      @include make-col(7);
     }
     @include make-col(12);
   }
